--- a/app/src/main/res/values/strings_tips.xml
+++ b/app/src/main/res/values/strings_tips.xml
@@ -23,20 +23,13 @@
     <string name="tip_2">
         Staying active is as good for the brain as it is for the body.
         Regular exercise or activity can have a major impact on your mental and emotional health,
-        relieve stress, improve memory, and help you sleep better.
-
-        If you\'re self-isolating or the usual place you exercise is closed,
+        relieve stress, improve memory, and help you sleep better.\n\nIf you\'re self-isolating or the usual place you exercise is closed,
         there are many ways you can keep fit at home such as climbing the stairs
-        or following free tutorials through Youtube.
-
-        If you are not self-isolating, it is still recommended to stretch your legs
+        or following free tutorials through Youtube.\n\nIf you are not self-isolating, it is still recommended to stretch your legs
         outside while maintaining a safe social distance of two metres from others.
     </string>
 
-    <string name='tip_3'>
-        Yoga, mindfulness, meditation and deep breathing can help reduce overall levels of stress.
-
-        <a href="https://keltymentalhealth.ca/breathr"> The Breathr App from Kelty Mental Health</a>
+    <string name='tip_3'>Yoga, mindfulness, meditation and deep breathing can help reduce overall levels of stress.\n\n<a href="https://keltymentalhealth.ca/breathr">The Breathr App from Kelty Mental Health</a>
         is a good resource to get started on mindfulness meditation.
     </string>
 
@@ -46,18 +39,8 @@
         leafy greens (spinach, kale and Brussels sprouts), and fresh fruit such as blueberries.
     </string>
 
-    <string name='tip_5'>
-        It\'s easy to get sucked in to reading constant updates on social media,
-        this can be mentally draining as well as putting you at risk of seeing false information.
-
-        A better way to stay informed is by checking out credible sources once or twice a day for updates.
-        Some reliable sources include:
-
-        <a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">BC Centre for Disease Control</a>
-        <a href="https://www.who.int">The World Health Organization</a>
-        <a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">Health Canada</a>
-
-        Remember, the information absorb can affect how we feel. We should monitor what we read with care.
+    <string name='tip_5'>It\'s easy to get sucked in to reading constant updates on social media, this can be mentally draining as well as putting you at risk of seeing false information.\n\nA better way to stay informed is by checking out credible sources once or twice a day for updates.
+        Some reliable sources include:\n\n<a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">BC Centre for Disease Control</a>\n\n<a href="https://www.who.int">The World Health Organization</a>\n\n<a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">Health Canada</a>\n\nRemember, the information absorb can affect how we feel. We should monitor what we read with care.
     </string>
 
     <string name='tip_6'>
@@ -66,22 +49,16 @@
     </string>
 
     <string name='tip_7'>
-        Those who are struggling with substance use issues might find stressful times particularly difficult.
-
-        To stay in recovery ensure you continue to identify high-risk situations that may put you most at risk for using,
+        Those who are struggling with substance use issues might find stressful times particularly difficult.\n\nTo stay in recovery ensure you continue to identify high-risk situations that may put you most at risk for using,
         such as spending time around others who are using. If you usually feel triggered by stress,
-        try using the self-care activities outlined here to manage this stress as best you can.
-
-        Also, don't forget to ask for support from people around you if you're finding this time particularly challenging.
+        try using the self-care activities outlined here to manage this stress as best you can.\n\nAlso, don\'t forget to ask for support from people around you if you\'re finding this time particularly challenging.
     </string>
 
-    <string name='tip_8'>
-        If you or a loved one needs more mental health support at this difficult time, there are many programs and resources that are available to you:
-
-        <a href="https://www.heretohelp.bc.ca/">Here to Help</a> provides mental-health and substance-use information you can trust.
-        <a href="https://keltymentalhealth.ca/">Kelty Mental Health Centre</a> has information on talking to children and youth.
-        <a href="https://crisiscentre.bc.ca/">BC Crisis Centre</a> is a non-profit, volunteer organization committed to helping people help themselves and others deal with crisis.
-        <a href="https://cmha.bc.ca/">Canadian Mental Health Association"</a> is a national charity that helps maintain and improve mental health for all Canadians
+    <string name='tip_8'>If you or a loved one needs more mental health support at this difficult time, there are many programs and resources that are available to you:\n\n<a href="https://www.heretohelp.bc.ca/">Here to Help</a>
+        provides mental-health and substance-use information you can trust.\n\n<a href="https://keltymentalhealth.ca/">Kelty Mental Health Centre</a>
+        has information on talking to children and youth.\n\n<a href="https://crisiscentre.bc.ca/">BC Crisis Centre</a>
+        is a non-profit, volunteer organization committed to helping people help themselves and others deal with crisis.\n\n<a href="https://cmha.bc.ca/">Canadian Mental Health Association"</a>
+        is a national charity that helps maintain and improve mental health for all Canadians
     </string>
 
     <string name='tip_9'>
@@ -96,8 +73,6 @@
         no matter how small. And recognize that some days will be better than others.
     </string>
 
-    <string name="source">
 
-    </string>
 
 </resources>
