Add font and update spacing

--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -27,8 +27,9 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:autoLink="web"
+        android:fontFamily="@font/montserrat"
         android:gravity="center_horizontal|fill_horizontal"
-        android:lineSpacingExtra="8sp"
+        android:lineSpacingExtra="6sp"
         android:linksClickable="true"
         android:text="@string/tips_textview"
         android:textSize="14sp"
