--- a/app/src/main/res/values/strings_tips.xml
+++ b/app/src/main/res/values/strings_tips.xml
@@ -38,8 +38,8 @@
     </string>
 
     <string name='tip_5'>Limit how often you check the news and only get news from reliable sources.\n\nIt\'s easy to get sucked in to
-        reading constant updates on social media, this can be mentally draining as well as putting you at risk of seeing false information.\n\nA better way to stay informed is by checking out credible sources once or twice a day for updates.
-        Some reliable sources include:\n\n<a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">\u2022BC Centre for Disease Control</a>\n\n<a href="https://www.who.int">\u2022The World Health Organization</a>\n\n<a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">\u2022Health Canada</a>\n\nRemember, the information absorb can affect how we feel. We should monitor what we read with care.
+        reading constant updates on social media, this can be mentally draining as well as putting you at risk of seeing false information.\n\nA better way to stay informed
+        is by checking out credible sources once or twice a day for updates. Some reliable sources include:\n\n<a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">\t\t\u2022 BC Centre for Disease Control</a>\n\n<a href="https://www.who.int">\t\u2022 The World Health Organization</a>\n\n<a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">\t\u2022 HealthCanada</a>\n\nRemember the information absorb can affect how we feel. We should monitor what we read with care.
     </string>
 
     <string name='tip_6'>Don\'t skimp on sleep.\n\nIt matters more than you think. One way to get sleep better is to take a break from the
@@ -54,10 +54,10 @@
     </string>
 
     <string name='tip_8'>Where to get more help.\n\nIf you or a loved one needs more mental health support at this difficult time,
-        there are many programs and resources that are available to you:\n\n<a href="https://www.heretohelp.bc.ca/">Here to Help</a>
-        provides mental-health and substance-use information you can trust.\n\n<a href="https://keltymentalhealth.ca/">\u2022Kelty Mental Health Centre</a>
-        has information on talking to children and youth.\n\n<a href="https://crisiscentre.bc.ca/">\u2022BC Crisis Centre</a>
-        is a non-profit, volunteer organization committed to helping people help themselves and others deal with crisis.\n\n<a href="https://cmha.bc.ca/">\u2022Canadian Mental Health Association"</a>
+        there are many programs and resources that are available to you:\n\n<a href="https://www.heretohelp.bc.ca/"> \t\u2022 Here to Help</a>
+        provides mental-health and substance-use information you can trust.\n\n<a href="https://keltymentalhealth.ca/">\t\u2022 Kelty Mental Health Centre</a>
+        has information on talking to children and youth.\n\n<a href="https://crisiscentre.bc.ca/">\t\u2022 BC Crisis Centre</a>
+        is a non-profit, volunteer organization committed to helping people help themselves and others deal with crisis.\n\n<a href="https://cmha.bc.ca/">\t\u2022 Canadian Mental Health Association"</a>
         is a national charity that helps maintain and improve mental health for all Canadians
     </string>
 
