--- a/app/src/main/res/values/strings_tips.xml
+++ b/app/src/main/res/values/strings_tips.xml
@@ -39,7 +39,7 @@
 
     <string name='tip_5'>Limit how often you check the news and only get news from reliable sources.\n\nIt\'s easy to get sucked in to
         reading constant updates on social media, this can be mentally draining as well as putting you at risk of seeing false information.\n\nA better way to stay informed
-        is by checking out credible sources once or twice a day for updates. Some reliable sources include:\n\n<a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">\t\t\u2022 BC Centre for Disease Control</a>\n\n<a href="https://www.who.int">\t\u2022 The World Health Organization</a>\n\n<a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">\t\u2022 HealthCanada</a>\n\nRemember the information absorb can affect how we feel. We should monitor what we read with care.
+        is by checking out credible sources once or twice a day for updates. Some reliable sources include:\n\n<a href="http://www.bccdc.ca/health-info/diseases-conditions/covid-19">\t\u2022 BC Centre for Disease Control</a>\n\n<a href="https://www.who.int">\t\u2022 The World Health Organization</a>\n\n<a href="https://www.canada.ca/en/public-health/services/diseases/coronavirus-disease-covid-19.html">\t\u2022 HealthCanada</a>\n\nRemember the information absorb can affect how we feel. We should monitor what we read with care.
     </string>
 
     <string name='tip_6'>Don\'t skimp on sleep.\n\nIt matters more than you think. One way to get sleep better is to take a break from the
