--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -4,47 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#232121"
     tools:context=".NewUserActivity">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="?android:attr/windowBackground"
+        android:visibility="visible"
+        app:itemTextColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/menu_navigation" />
 
     <EditText
         android:id="@+id/nameEditText"
         android:layout_width="280dp"
         android:layout_height="41dp"
-        android:layout_marginStart="65dp"
         android:layout_marginTop="136dp"
-        android:layout_marginEnd="66dp"
         android:ems="10"
         android:hint="Enter Name"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_width="283dp"
+        android:layout_width="280dp"
         android:layout_height="50dp"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="65dp"
+        android:layout_marginTop="35dp"
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textPersonName"
+        android:textColorHint="#EFEDED"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameEditText" />
 
     <EditText
         android:id="@+id/interestsEditText"
-        android:layout_width="281dp"
+        android:layout_width="280dp"
         android:layout_height="54dp"
-        android:layout_marginStart="62dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginTop="35dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Enter Some Interests"
         android:inputType="textMultiLine"
+        android:textColorHint="#F4F1F1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
@@ -53,11 +65,15 @@
         android:id="@+id/submitBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="149dp"
+        android:layout_marginStart="155dp"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="169dp"
+        android:layout_marginEnd="155dp"
+        android:background="@drawable/circle"
         android:text="Submit"
+        app:backgroundTint="#363C38"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/interestsEditText" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
