--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -42,6 +42,7 @@
         android:ems="10"
         android:hint="Enter Email"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
         android:textColorHint="#EFEDED"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +57,7 @@
         android:gravity="start|top"
         android:hint="Enter Some Interests"
         android:inputType="textMultiLine"
+        android:textColor="#FFFFFF"
         android:textColorHint="#F4F1F1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
