--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -65,7 +65,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="interests :"
+                android:text="Interests :"
                 android:padding="5dp"
                 android:textStyle="bold"
                 android:textSize="20sp"/>
