Update UI and refactor

--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -26,6 +26,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="136dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Enter Name"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF"
@@ -40,6 +41,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="35dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Enter Email"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF"
@@ -54,9 +56,10 @@
         android:layout_height="54dp"
         android:layout_marginTop="35dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:gravity="start|top"
         android:hint="Enter Some Interests"
-        android:inputType="textMultiLine"
+        android:inputType="text"
         android:textColor="#FFFFFF"
         android:textColorHint="#F4F1F1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,6 +74,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="155dp"
         android:background="@drawable/circle"
+        android:fontFamily="@font/montserrat"
         android:text="Submit"
         app:backgroundTint="#363C38"
         app:layout_constraintEnd_toEndOf="parent"
