--- a/app/src/main/res/layout/activity_message_user.xml
+++ b/app/src/main/res/layout/activity_message_user.xml
@@ -28,6 +28,7 @@
         android:layout_marginBottom="10dp"
         android:background="#FFFFFF"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:gravity="start|top"
         android:hint="Send a message"
         android:inputType="textMultiLine"
@@ -40,6 +41,7 @@
         android:layout_height="50dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
+        android:fontFamily="@font/montserrat"
         android:text="Send"
         app:backgroundTint="#363C38"
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
@@ -50,6 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/montserrat"
         android:text="TextView"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
