--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
     android:padding="20dp"
-    android:layout_margin="10dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,18 +21,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:padding="5dp"
                 android:text="Email :"
-                android:padding="5dp"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:textSize="16sp" />
+
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="dummy@gmail.com"
-                android:textStyle="bold"
-                android:layout_marginStart="20dp"
                 android:id="@+id/email_text"
-                android:textSize="17sp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/montserrat"
+                android:text="dummy@gmail.com"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -43,18 +44,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:padding="5dp"
                 android:text="Name :"
-                android:padding="5dp"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:textSize="16sp" />
+
             <TextView
+                android:id="@+id/name_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="dummy"
-                android:textStyle="bold"
                 android:layout_marginStart="20dp"
-                android:id="@+id/name_text"
-                android:textSize="17sp"/>
+                android:fontFamily="@font/montserrat"
+                android:text="dummy"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -65,18 +67,19 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Interests :"
+                android:fontFamily="@font/montserrat"
                 android:padding="5dp"
-                android:textStyle="bold"
-                android:textSize="20sp"/>
+                android:text="Interests :"
+                android:textSize="16sp" />
+
             <TextView
+                android:id="@+id/interests_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="dummy interests"
-                android:textStyle="bold"
                 android:layout_marginStart="20dp"
-                android:id="@+id/interests_text"
-                android:textSize="17sp"/>
+                android:fontFamily="@font/montserrat"
+                android:text="dummy interests"
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
