--- a/app/src/main/res/layout/activity_message_user.xml
+++ b/app/src/main/res/layout/activity_message_user.xml
@@ -31,7 +31,8 @@
         android:fontFamily="@font/montserrat"
         android:gravity="start|top"
         android:hint="Send a message"
-        android:inputType="textMultiLine"
+        android:inputType="text"
+        android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         app:layout_constraintStart_toStartOf="parent" />
 
