Extract string resources

--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -25,9 +25,10 @@
         android:layout_width="280dp"
         android:layout_height="41dp"
         android:layout_marginTop="136dp"
+        android:autofillHints="name"
         android:ems="10"
         android:fontFamily="@font/montserrat"
-        android:hint="Enter Name"
+        android:hint="@string/enter_name"
         android:inputType="textPersonName"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
@@ -40,10 +41,11 @@
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginTop="35dp"
+        android:autofillHints="email"
         android:ems="10"
         android:fontFamily="@font/montserrat"
-        android:hint="Enter Email"
-        android:inputType="textPersonName"
+        android:hint="@string/enter_email"
+        android:inputType="textEmailAddress"
         android:textColor="#FFFFFF"
         android:textColorHint="#EFEDED"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,10 +57,11 @@
         android:layout_width="280dp"
         android:layout_height="54dp"
         android:layout_marginTop="35dp"
+        android:autofillHints="interests"
         android:ems="10"
         android:fontFamily="@font/montserrat"
         android:gravity="start|top"
-        android:hint="Enter Some Interests"
+        android:hint="@string/enter_some_interests"
         android:inputType="text"
         android:textColor="#FFFFFF"
         android:textColorHint="#F4F1F1"
@@ -75,7 +78,7 @@
         android:layout_marginEnd="155dp"
         android:background="@drawable/circle"
         android:fontFamily="@font/montserrat"
-        android:text="Submit"
+        android:text="@string/submit"
         app:backgroundTint="#363C38"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
