--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -43,7 +43,7 @@
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         app:layout_constraintEnd_toEndOf="@+id/navigation_bar"
         app:srcCompat="@drawable/ic_baseline_add_24"
-        android:contentDescription="TODO"
+        android:contentDescription="@string/add_new_user"
         android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
