--- a/app/src/main/res/layout/activity_message_user.xml
+++ b/app/src/main/res/layout/activity_message_user.xml
@@ -30,7 +30,8 @@
         android:ems="10"
         android:fontFamily="@font/montserrat"
         android:gravity="start|top"
-        android:hint="Send a message"
+        android:hint="@string/send_a_message"
+        android:autofillHints="@string/message"
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
@@ -43,7 +44,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
         android:fontFamily="@font/montserrat"
-        android:text="Send"
+        android:text="@string/send"
         app:backgroundTint="#363C38"
         app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -54,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/montserrat"
-        android:text="TextView"
+        android:text="@string/textview"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
